# secure-manegment

./: README.md
apps/calendar/: setup.py
apps/calendar/io_comp/: app.py  calendar.py
apps/calendar/tests/: test_app.py
apps/messenger/: .env.example  Dockerfile  alembic.ini  client.py  requirements.txt  test_messenger.db
apps/messenger/migrations/: env.py  script.py.mako
apps/messenger/migrations/versions/: 001_initial.py  002_add_email_to_users.py
apps/messenger/server/: auth.py  broadcaster.py  crypto.py  dependencies.py  main.py  models.py  repositories.py  routes.py
apps/messenger/static/: index.html
apps/messenger/tests/: test_app.py
calendar_project/: .gitignore
calendar_project/python-project/io_comp/: event.py  ui.py
calendar_project/python-project/io_comp/templates/: index.html
pdf-files/pdf-files/: .gitignore  README.md  _debug_ocr.py  container.py  main.py  pyproject.toml  requirements.txt
pdf-files/pdf-files/src/app/: base_parser.py  detector.py  parser_type_a.py  parser_type_b.py  validating_decorator.py  variation_type_a.py  variation_type_b.py
pdf-files/pdf-files/src/domain/: interfaces.py  models.py
pdf-files/pdf-files/src/infra/: generator_type_a.py  generator_type_b.py  pdf_reader.py
pdf-files/pdf-files/tests/: __init__.py
pdf-files/pdf-files/tests/unit/: conftest.py  test_detector.py  test_models.py  test_variation_type_a.py  test_variation_type_b.py
