[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "attendance-generator"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10",
    "pdf2image>=1.17",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "reportlab>=4.1",
    "python-bidi>=0.4.2",
    "dependency-injector>=4.41",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
pythonpath   = ["."]
testpaths    = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
python_version       = "3.10"
ignore_missing_imports = true
